- Deleted the aggregate_metrics.py file as it was no longer needed. - Updated distributions_plots.ipynb and evolution_plots.ipynb to add comments for clarity on probability calculations (optimistic and pessimistic models). - Modified the OpinionEvolution class in opinion_evolution.py to use 'probabilities' as the default kind parameter. - Adjusted plots.py to pass the 'kind' parameter when initializing the OpinionEvolution class.

--- a/model/viz/distributions_plots.ipynb
+++ b/model/viz/distributions_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,8 @@
     "        \n",
     "        if values == 'probabilities':\n",
     "            weights = np.array([el for el in self.ops])\n",
-    "            self.values = p_o * weights + p_p * (1-weights)\n",
+    "            self.values = p_o * weights + p_p * (1-weights) # opt model\n",
+    "            # self.values = p_o * (1- weights) + p_p * weights  # pess model\n",
     "            \n",
     "        elif values == 'weights':\n",
     "            self.values = np.array([el for el in self.ops])\n",
