--- a/model/viz/evolution_plots.ipynb
+++ b/model/viz/evolution_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "import future.utils\n",
     "\n",
     "class OpinionEvolution(object):\n",
-    "    def __init__(self, trends, p_o, p_p, kind='probability'):\n",
+    "    def __init__(self, trends, p_o, p_p, kind='probabilities'):\n",
     "        \n",
     "        \"\"\"\n",
     "        :param p_o: The model p_o parameter\n",
@@ -30,13 +30,14 @@
     "        \n",
     "        def transform(w: list, p_o: int, p_p: int):\n",
     "            w = np.array(w)\n",
-    "            p = w * p_o + (1 - w) * p_p\n",
+    "            p = w * p_o + (1 - w) * p_p # optimistic model\n",
+    "            # p = (1 - w) * p_o + w * p_p # pessimistic model\n",
     "            p = p.tolist()\n",
     "            return p\n",
     "\n",
     "        for it in trends:\n",
     "            weights = np.array([el for el in it['status'].values()])\n",
-    "            if kind == 'probability':\n",
+    "            if kind == 'probabilities':\n",
     "                sts = transform(weights, p_o, p_p)  # update conditional probabilities of event will occur\n",
     "            else:\n",
     "                sts = weights\n",
