Add logarithmic colorbar in heatmap function for number of iterations

--- a/model/viz/aggregate_plots.ipynb
+++ b/model/viz/aggregate_plots.ipynb
@@ -125,8 +125,9 @@
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
+    "from matplotlib.colors import LogNorm\n",
     "\n",
-    "def heatmap(kind, metric, figname=None):\n",
+    "def heatmap(kind, metric, log_scale=False, figname=None):\n",
     "    # Filter the DataFrame\n",
     "    \n",
     "    df_filtered = df[df[\"kind\"] == kind]\n",
@@ -139,7 +140,10 @@
     "    if metric == 'avg_average_opinions':\n",
     "        sns.heatmap(heatmap_data, vmin=0, vmax=1, cmap=\"Blues\", annot=True, fmt=\".2f\")\n",
     "    elif metric == 'avg_number_iterations':\n",
-    "        sns.heatmap(heatmap_data, cmap=\"Blues\", annot=True, fmt=\".0f\")\n",
+    "        if log_scale:\n",
+    "            sns.heatmap(heatmap_data, cmap=\"Blues\", annot=True, fmt=\".0f\", norm=LogNorm())\n",
+    "        else:\n",
+    "            sns.heatmap(heatmap_data, cmap=\"Blues\", annot=True, fmt=\".0f\")\n",
     "    elif metric.startswith('avg_lobbyists_performance') or metric == 'avg_average_pairwise_distance' or metric == 'avg_std_opinions':\n",
     "        sns.heatmap(heatmap_data, vmin = 0, cmap=\"Blues\", annot=True, fmt=\".2f\")\n",
     "    elif metric == 'avg_effective_number_clusters':\n",
@@ -165,12 +169,9 @@
     "        for col in columns:\n",
     "            if col.startswith('avg') or col.startswith('t_stat') or col.startswith('p_val') :\n",
     "                metric = col\n",
-    "                # heatmap(kind, metric, figname=f'{kind}_{metric}.png')\n",
-    "                # figpath = os.path.join(basepath, 'figures')\n",
-    "                # os.makedirs(figpath, exist_ok=True)\n",
-    "                figname = 'heatmap_{kind}_{metric}.png'\n",
-    "                heatmap(kind, metric, figname=figname)\n",
-    "                heatmap(kind, metric, figname=None)"
+    "                figname = f'heatmap_{kind}_{metric}.png'\n",
+    "                heatmap(kind, metric, log_scale=True, figname=figname)\n",
+    "                heatmap(kind, metric, log_scale=True, figname=None)"
    ]
   },
   {
