Fix random sender selection in AlmondoModel and clean up code in executor_sensitivity_custom_prior_w.py

--- a/model/viz/aggregate_plots.ipynb
+++ b/model/viz/aggregate_plots.ipynb
@@ -66,6 +66,8 @@
     "    try:\n",
     "        lambda_v = float(folder.split('_')[0])  \n",
     "        phi_v = float(folder.split('_')[1])\n",
+    "        #if lambda_v ==0.05 or lambda_v == 0.95 or phi_v == 0.05 or phi_v ==0.95:\n",
+    "        #  continue\n",
     "    except:\n",
     "        continue\n",
     "    \n",
