Add random strategy creation methods (random on full strategy matrix and random on each step) and enhance heatmap visualization in aggregate plots

--- a/model/viz/aggregate_plots.ipynb
+++ b/model/viz/aggregate_plots.ipynb
@@ -140,21 +140,27 @@
     "    # Plot the heatmap\n",
     "    plt.figure(figsize=(8, 6))\n",
     "    if metric == 'avg_average_opinions':\n",
-    "        sns.heatmap(heatmap_data, vmin=0, vmax=1, cmap=\"Blues\", annot=True, fmt=\".2f\")\n",
+    "        ax = sns.heatmap(heatmap_data, vmin=0, vmax=1, cmap=\"Blues\", annot=True, fmt=\".2f\")\n",
     "    elif metric == 'avg_number_iterations':\n",
     "        if log_scale:\n",
-    "            sns.heatmap(heatmap_data, cmap=\"Blues\", annot=True, fmt=\".0f\", norm=LogNorm())\n",
+    "            ax = sns.heatmap(heatmap_data, cmap=\"Blues\", annot=True, fmt=\".0f\", norm=LogNorm())\n",
     "        else:\n",
-    "            sns.heatmap(heatmap_data, cmap=\"Blues\", annot=True, fmt=\".0f\")\n",
+    "            ax = sns.heatmap(heatmap_data, cmap=\"Blues\", annot=True, fmt=\".0f\")\n",
     "    elif metric.startswith('avg_lobbyists_performance') or metric == 'avg_average_pairwise_distance' or metric == 'avg_std_opinions':\n",
-    "        sns.heatmap(heatmap_data, vmin = 0, cmap=\"Blues\", annot=True, fmt=\".2f\")\n",
+    "        ax = sns.heatmap(heatmap_data, vmin = 0, cmap=\"Blues\", annot=True, fmt=\".2f\")\n",
     "    elif metric == 'avg_effective_number_clusters':\n",
-    "        sns.heatmap(heatmap_data, vmin = 1,vmax = 3, cmap=\"Blues\", annot=True, fmt=\".2f\")\n",
+    "        ax = sns.heatmap(heatmap_data, vmin = 1,vmax = 1.3, cmap=\"Blues\", annot=True, fmt=\".2f\")\n",
     "    else:\n",
-    "        sns.heatmap(heatmap_data, cmap=\"Blues\", annot=True, fmt=\".2f\")\n",
+    "        ax = sns.heatmap(heatmap_data, cmap=\"Blues\", annot=True, fmt=\".2f\")\n",
     "    plt.title(f\"Heatmap of {metric} for {kind}\")\n",
-    "    plt.xlabel(\"Phi\")\n",
-    "    plt.ylabel(\"Lambda\")\n",
+    "    plt.xlabel(r\"Strength of directional motivated reasoning $\\phi$\", fontsize = 11)\n",
+    "    plt.ylabel(r\"Degree of under-reaction $\\lambda$\", fontsize = 11)\n",
+    "    ## change fontsize of heatmap ticks\n",
+    "    plt.xticks(fontsize=11)  \n",
+    "    plt.yticks(fontsize=11)\n",
+    "    ## change font size of colobar label\n",
+    "    cbar = ax.collections[0].colorbar\n",
+    "    cbar.ax.tick_params(labelsize=11)\n",
     "    figpath = os.path.join(basepath, 'figures')\n",
     "    os.makedirs(figpath, exist_ok=True)\n",
     "    \n",
