Fix logarithmic normalization in heatmap for number of iterations

--- a/model/viz/aggregate_plots.ipynb
+++ b/model/viz/aggregate_plots.ipynb
@@ -143,7 +143,7 @@
     "        ax = sns.heatmap(heatmap_data, vmin=0, vmax=1, cmap=\"Blues\", annot=True, fmt=\".2f\")\n",
     "    elif metric == 'avg_number_iterations':\n",
     "        if log_scale:\n",
-    "            ax = sns.heatmap(heatmap_data, cmap=\"Blues\", annot=True, fmt=\".0f\", norm=LogNorm())\n",
+    "            ax = sns.heatmap(heatmap_data, cmap=\"Blues\", annot=True, fmt=\".0f\", norm=LogNorm(vmin = 1))\n",
     "        else:\n",
     "            ax = sns.heatmap(heatmap_data, cmap=\"Blues\", annot=True, fmt=\".0f\")\n",
     "    elif metric.startswith('avg_lobbyists_performance') or metric == 'avg_average_pairwise_distance' or metric == 'avg_std_opinions':\n",
