--- a/src/almondo_model/viz/aggregate_plots.ipynb
+++ b/src/almondo_model/viz/aggregate_plots.ipynb
@@ -312,7 +312,102 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "def single_line_param_plot(kind, metric, log_scale=False, figname=None):\n",
+    "\n",
+    "    df_filtered = df[df[\"kind\"] == kind]\n",
+    "    \n",
+    "    # Plot the scatterplot\n",
+    "    plt.figure(figsize=(8, 6)) # (8, 6)\n",
+    "\n",
+    "    if metric == 'avg_average_opinions':\n",
+    "        ax = sns.scatterplot(data=df_filtered, x=\"phi\", y=metric,  hue=\"lambda\")\n",
+    "        # ax = sns.lineplot(data=df_filtered, x=\"phi\", y=metric,  hue=\"lambda\", markers=True, dashes=True)\n",
+    "        #add horizontal line to scatterplot\n",
+    "        plt.axhline(y=0.5)\n",
+    "        plt.ylim(0.0,1.0)\n",
+    "    if metric ==  'avg_number_iterations':\n",
+    "        if log_scale:\n",
+    "            ax = sns.scatterplot(data=df_filtered, x=\"phi\", y=metric,  hue=\"lambda\")\n",
+    "            plt.yscale('log')\n",
+    "        else:\n",
+    "            ax = sns.scatterplot(data=df_filtered, x=\"phi\", y=metric,  hue=\"lambda\")\n",
+    "    if metric ==  'avg_effective_number_clusters':\n",
+    "         ax = sns.scatterplot(data=df_filtered, x=\"phi\", y=metric,  hue=\"lambda\")\n",
+    "         plt.ylim(0.0,1.3) \n",
+    "\n",
+    "    plt.title(f\"Scatterplot of {metric} for {kind}\")\n",
+    "    plt.xlabel(r\"Strength of directional motivated reasoning $\\phi$\", fontsize = 11)\n",
+    "    plt.ylabel(f\"{metric}\", fontsize = 11)\n",
+    "    ## change fontsize of heatmap ticks\n",
+    "    plt.xticks(fontsize=11)  \n",
+    "    plt.yticks(fontsize=11)\n",
+    "   \n",
+    "    figpath = os.path.join(basepath, 'figures')\n",
+    "    os.makedirs(figpath, exist_ok=True)\n",
+    "    \n",
+    "    if figname is not None:\n",
+    "        figname = os.path.join(figpath, figname)\n",
+    "        plt.savefig(figname, dpi=300, bbox_inches='tight', facecolor='white')\n",
+    "    else:\n",
+    "        plt.show()\n",
+    "        \n",
+    "    plt.close()\n",
+    "\n",
+    "def single_line_param_plot_zoom(kind, metric, log_scale=False, figname=None):\n",
+    "    # Plot the scatterplot\n",
+    "    df_filtered = df[df[\"kind\"] == kind]\n",
+    "    df_zoom = df_filtered[df_filtered[\"phi\"] < 0.3]\n",
+    "    \n",
+    "    # Plot the scatterplot\n",
+    "    plt.figure(figsize=(8, 6)) # (8, 6)\n",
+    "\n",
+    "    if metric == 'avg_average_opinions':\n",
+    "        ax = sns.scatterplot(data=df_zoom, x=\"phi\", y=metric,  hue=\"lambda\")\n",
+    "        # ax = sns.lineplot(data=df_filtered, x=\"phi\", y=metric,  hue=\"lambda\", markers=True, dashes=True)\n",
+    "        #add horizontal line to scatterplot\n",
+    "        plt.axhline(y=0.5)\n",
+    "        plt.axvline(x=0.1,ls='--')\n",
+    "        plt.ylim(0.0,1.0)\n",
+    "    if metric ==  'avg_number_iterations':\n",
+    "        ax = sns.scatterplot(data=df_zoom, x=\"phi\", y=metric,  hue=\"lambda\")\n",
+    "        if log_scale:\n",
+    "            plt.yscale('log')\n",
+    "    if metric ==  'avg_effective_number_clusters':\n",
+    "         ax = sns.scatterplot(data=df_zoom, x=\"phi\", y=metric,  hue=\"lambda\")\n",
+    "         plt.ylim(0.0,1.3) \n",
+    "\n",
+    "    plt.title(f\"Scatterplot of {metric} for {kind}\")\n",
+    "    plt.xlabel(r\"Strength of directional motivated reasoning $\\phi$\", fontsize = 11)\n",
+    "    plt.ylabel(f\"{metric}\", fontsize = 11)\n",
+    "    ## change fontsize of heatmap ticks\n",
+    "    plt.xticks(fontsize=11)  \n",
+    "    plt.yticks(fontsize=11)\n",
+    "   \n",
+    "    figpath = os.path.join(basepath, 'figures')\n",
+    "    os.makedirs(figpath, exist_ok=True)\n",
+    "    \n",
+    "    if figname is not None:\n",
+    "        figname = os.path.join(figpath, figname)\n",
+    "        plt.savefig(figname, dpi=300, bbox_inches='tight', facecolor='white')\n",
+    "    else:\n",
+    "        plt.show()\n",
+    "        \n",
+    "    plt.close()\n",
+    "\n",
+    "metrics = ['avg_average_opinions', 'avg_number_iterations', 'avg_effective_number_clusters']\n",
+    "for kind in ['probabilities']:\n",
+    "    if kind in df['kind'].unique() :\n",
+    "        for metric in metrics:\n",
+    "            figname = f'scatterplot_{kind}_{metric}.png'\n",
+    "            figname_zoom = f'scatterplot_{kind}_{metric}_zoom.png'\n",
+    "            single_line_param_plot(kind, metric, log_scale=True, figname=figname)\n",
+    "            single_line_param_plot(kind, metric, log_scale=True, figname=None)\n",
+    "            single_line_param_plot_zoom(kind, metric, log_scale=True, figname=figname_zoom)\n",
+    "            single_line_param_plot_zoom(kind, metric, log_scale=True, figname=None)"
+   ]
   },
   {
    "cell_type": "code",
@@ -338,7 +433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "spyder-runtime",
    "language": "python",
    "name": "python3"
   },
@@ -352,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
